Bug 517802 - Use a new API on 10.5 that lets us scroll dirty rects instead of always invalidating the whole view when scrolling a dirty view. r=josh